from __future__ import annotations

import uuid
from datetime import datetime
from typing import TYPE_CHECKING

from sqlalchemy import DateTime, ForeignKey, String, Uuid, func
from sqlalchemy.orm import Mapped, mapped_column, relationship

from app.core.database import Base

if TYPE_CHECKING:
    from app.models.chat_session import ChatSession
    from app.models.class_student import ClassStudent
    from app.models.quiz import Quiz
    from app.models.quiz_assignment import QuizAssignment
    from app.models.user import User


class Class(Base):
    __tablename__ = "classes"

    id: Mapped[uuid.UUID] = mapped_column(
        Uuid(as_uuid=True), primary_key=True, default=uuid.uuid4
    )
    name: Mapped[str] = mapped_column(String(255), nullable=False)
    description: Mapped[str | None] = mapped_column(String(2048), nullable=True)
    image_url: Mapped[str | None] = mapped_column(String(2048), nullable=True)
    thumbnail_url: Mapped[str | None] = mapped_column(String(2048), nullable=True)
    teacher_id: Mapped[uuid.UUID] = mapped_column(
        Uuid(as_uuid=True),
        ForeignKey("users.id", ondelete="CASCADE"),
        nullable=False,
        index=True,
    )
    created_at: Mapped[datetime] = mapped_column(
        DateTime(timezone=True), nullable=False, server_default=func.now()
    )

    # Relationships
    teacher: Mapped["User"] = relationship(back_populates="taught_classes")
    students: Mapped[list["User"]] = relationship(
        secondary="class_students",
        back_populates="enrolled_classes",
        overlaps="class_students",
    )
    class_students: Mapped[list["ClassStudent"]] = relationship(
        back_populates="class_", cascade="all, delete-orphan", overlaps="students"
    )
    chat_sessions: Mapped[list["ChatSession"]] = relationship(
        back_populates="class_", cascade="all, delete-orphan"
    )
    quizzes: Mapped[list["Quiz"]] = relationship(
        back_populates="class_", cascade="all, delete-orphan"
    )
    quiz_assignments: Mapped[list["QuizAssignment"]] = relationship(
        back_populates="class_", cascade="all, delete-orphan"
    )
